--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release Container Images (image-diff only)
+name: Release Container Images (SBOM package diff)
 
 on:
   push:
@@ -25,15 +25,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Install container-diff & jq
+      - name: Install syft & jq
         run: |
           set -euxo pipefail
+          curl -sSfL https://get.anchore.io/syft | sudo sh -s -- -b /usr/local/bin
+          syft --version
           sudo apt-get update
           sudo apt-get install -y jq
-          curl -sSL -o container-diff https://storage.googleapis.com/container-diff/latest/container-diff-linux-amd64
-          chmod +x container-diff
-          sudo mv container-diff /usr/local/bin/
-          container-diff version || true
 
       - name: Extract release numbers
         id: ver
@@ -74,81 +72,115 @@ jobs:
           echo "has_old=true" >> "$GITHUB_OUTPUT"
           echo "old_ref=$OLD" >> "$GITHUB_OUTPUT"
 
-      - name: Generate per-flavor changelog (image diff only)
+      - name: Generate SBOMs (NEW & OLD if exists)
+        id: sbom
         shell: bash
         run: |
           set -euo pipefail
           rel='${{ steps.ver.outputs.rel }}'
+          prev='${{ steps.ver.outputs.prev }}'
           flavor='${{ matrix.flavor }}'
           NEW="almalinux${rel}-${flavor}:${{ steps.ver.outputs.tag }}"
 
-          if [[ '${{ steps.oldimg.outputs.has_old }}' != 'true' ]]; then
+          mkdir -p "sbom/$rel" "sbom/$prev"
+
+          # NEW SBOM
+          NEW_JSON="sbom/$rel/$flavor.json"
+          for i in 1 2 3; do
+            syft "docker:$NEW" -o json > "$NEW_JSON" && break
+            echo "syft NEW failed (try $i), retry..." >&2
+            sleep 5
+            [[ $i -eq 3 ]] && { echo "syft NEW failed 3 times"; exit 1; }
+          done
+          echo "new_json=$NEW_JSON" >> "$GITHUB_OUTPUT"
+
+          # OLD SBOM (if we could build OLD)
+          if [[ '${{ steps.oldimg.outputs.has_old }}' == 'true' ]]; then
+            OLD='${{ steps.oldimg.outputs.old_ref }}'
+            OLD_JSON="sbom/$prev/$flavor.json"
+            for i in 1 2 3; do
+              syft "docker:$OLD" -o json > "$OLD_JSON" && break
+              echo "syft OLD failed (try $i), retry..." >&2
+              sleep 5
+              if [[ $i -eq 3 ]]; then
+                echo "syft OLD failed 3 times; treat as initial."
+                OLD_JSON=""
+                break
+              fi
+            done
+            if [[ -n "$OLD_JSON" ]]; then
+              echo "has_old_sbom=true" >> "$GITHUB_OUTPUT"
+              echo "old_json=$OLD_JSON" >> "$GITHUB_OUTPUT"
+            else
+              echo "has_old_sbom=false" >> "$GITHUB_OUTPUT"
+            fi
+          else
+            echo "has_old_sbom=false" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Generate per-flavor changelog (package diff from SBOM)
+        shell: bash
+        run: |
+          set -euo pipefail
+          rel='${{ steps.ver.outputs.rel }}'
+          prev='${{ steps.ver.outputs.prev }}'
+          flavor='${{ matrix.flavor }}'
+          NEW_JSON='${{ steps.sbom.outputs.new_json }}'
+          OLD_JSON='${{ steps.sbom.outputs.old_json }}'
+
+          if [[ ! -f "$NEW_JSON" ]]; then
+            echo "NEW SBOM missing: $NEW_JSON" >&2
+            exit 1
+          fi
+
+          if [[ '${{ steps.sbom.outputs.has_old_sbom }}' != 'true' || ! -f "$OLD_JSON" ]]; then
             {
-              echo "# Initial Release (image diff): AlmaLinux $rel ($flavor)"
+              echo "# Initial Release: AlmaLinux $rel ($flavor)"
               echo
-              echo "No previous release directory to diff against (rel-1 missing)."
+              echo "- SBOM: \`$NEW_JSON\`"
+              echo "- Packages: \`$(jq -r '.artifacts | length' "$NEW_JSON" 2>/dev/null || echo "n/a")\`"
               echo
-              echo "## Image Metadata (NEW)"
-              docker image inspect "$NEW" | jq -r '.[0] |
-                "Id: \(.Id)\nRepoTags: \(.RepoTags // [])\nSize: \(.Size) bytes\nConfig: Entrypoint=\(.Config.Entrypoint // []), Cmd=\(.Config.Cmd // []), Env=\((.Config.Env // [])|length) vars, Labels=\((.Config.Labels // {})|keys|length)"'
+              echo "No previous version to diff against."
             } > "RELEASE_CHANGELOG-${flavor}.md"
             exit 0
           fi
 
-          OLD='${{ steps.oldimg.outputs.old_ref }}'
+          # パッケージ一覧（name version）
+          jq -r '.artifacts[]?|"\(.name) \(.version)"' "$OLD_JSON" | sort > /tmp/pkgs-old.txt
+          jq -r '.artifacts[]?|"\(.name) \(.version)"' "$NEW_JSON" | sort > /tmp/pkgs-new.txt
 
-          # --- Inspect metadata (use Image ID; RepoDigest はローカルでは空のことが多い)
-          NEW_META=$(docker image inspect "$NEW")
-          OLD_META=$(docker image inspect "$OLD")
-          NEW_ID=$(echo "$NEW_META" | jq -r '.[0].Id')
-          OLD_ID=$(echo "$OLD_META" | jq -r '.[0].Id')
-          NEW_SIZE=$(echo "$NEW_META" | jq -r '.[0].Size // 0')
-          OLD_SIZE=$(echo "$OLD_META" | jq -r '.[0].Size // 0')
-          SIZE_DELTA=$((NEW_SIZE-OLD_SIZE))
+          # 名前集合
+          cut -d' ' -f1 /tmp/pkgs-old.txt | sort -u > /tmp/old.names
+          cut -d' ' -f1 /tmp/pkgs-new.txt | sort -u > /tmp/new.names
 
-          SAME_IMG=false
-          [[ "$NEW_ID" == "$OLD_ID" ]] && SAME_IMG=true
+          ADDED_NAMES=$(comm -13 /tmp/old.names /tmp/new.names || true)
+          REMOVED_NAMES=$(comm -23 /tmp/old.names /tmp/new.names || true)
 
-          # --- container-diff: file/metadata/history
-          container-diff diff daemon://"$OLD" daemon://"$NEW" \
-            --type=file --type=metadata --type=history --json > /tmp/diff.json
-
-          # --- File change counts & lists
-          jq -r '.[] | select(.AnalyserName=="File") | .Diff.Added[]?.Name'   /tmp/diff.json | sort > /tmp/added.txt || true
-          jq -r '.[] | select(.AnalyserName=="File") | .Diff.Deleted[]?.Name' /tmp/diff.json | sort > /tmp/removed.txt || true
-          jq -r '.[] | select(.AnalyserName=="File") | .Diff.Changed[]?.Name' /tmp/diff.json | sort > /tmp/changed.txt || true
-          ADDED=$(wc -l < /tmp/added.txt | xargs)
-          REMOVED=$(wc -l < /tmp/removed.txt | xargs)
-          MODIFIED=$(wc -l < /tmp/changed.txt | xargs)
-
-          TOP() { head -n "${1:-100}" || true; }
+          # 同名のバージョン変更
+          UPDATED=$(
+            join -j1 -o 1.1,1.2,2.2 \
+              <(sort /tmp/pkgs-old.txt) \
+              <(sort /tmp/pkgs-new.txt) \
+            | awk '$2 != $3 {print $1" " $2 " -> " $3}' || true
+          )
 
           {
-            echo "# Changelog (image diff): AlmaLinux $((rel-1)) → $rel ($flavor)"
+            echo "# Changelog: AlmaLinux $prev → $rel ($flavor)"
             echo
-            echo "## Image Metadata"
-            echo "- OLD id: \`$OLD_ID\`"
-            echo "- NEW id: \`$NEW_ID\`"
-            echo "- Size: OLD \`$OLD_SIZE\` → NEW \`$NEW_SIZE\` (**Δ $SIZE_DELTA bytes**)"
-            if $SAME_IMG; then
-              echo
-              echo "> Note: Image IDs are identical. No filesystem/config changes are expected."
-            fi
+            echo "## Updated Packages"
+            echo '```'
+            [[ -n "$UPDATED" ]] && echo "$UPDATED" || echo "(none)"
+            echo '```'
             echo
-            echo "## File Changes (from container-diff)"
-            echo "- Added: \`$ADDED\`  Removed: \`$REMOVED\`  Modified: \`$MODIFIED\`"
+            echo "## Added Packages"
+            echo '```'
+            [[ -n "$ADDED_NAMES" ]] && echo "$ADDED_NAMES" || echo "(none)"
+            echo '```'
             echo
-            echo "### Added (top 100)";    echo '```'; TOP 100 < /tmp/added.txt;    echo '```'
-            echo "### Removed (top 100)";  echo '```'; TOP 100 < /tmp/removed.txt;  echo '```'
-            echo "### Modified (top 100)"; echo '```'; TOP 100 < /tmp/changed.txt;  echo '```'
-            echo
-            echo "## History / Layers (from container-diff)"
-            jq -r '.[] | select(.AnalyserName=="History") | .Diff | to_entries[]
-              | "- \(.key): \(.value|tostring)"' /tmp/diff.json || true
-            echo
-            echo "## Config Diff (from container-diff metadata)"
-            jq -r '.[] | select(.AnalyserName=="Metadata") | .Diff | to_entries[]
-              | "- \(.key): \(.value|tostring)"' /tmp/diff.json || true
+            echo "## Removed Packages"
+            echo '```'
+            [[ -n "$REMOVED_NAMES" ]] && echo "$REMOVED_NAMES" || echo "(none)"
+            echo '```'
           } > "RELEASE_CHANGELOG-${flavor}.md"
 
       - name: Upload changelog artifact
@@ -157,6 +189,16 @@ jobs:
           name: changelog-${{ matrix.flavor }}
           path: RELEASE_CHANGELOG-${{ matrix.flavor }}.md
           if-no-files-found: error
+          retention-days: 7
+
+      - name: Upload SBOM artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: sbom-${{ steps.ver.outputs.rel }}-${{ matrix.flavor }}
+          path: |
+            sbom/${{ steps.ver.outputs.rel }}/${{ matrix.flavor }}.json
+            sbom/${{ steps.ver.outputs.prev }}/${{ matrix.flavor }}.json
+          if-no-files-found: ignore
           retention-days: 7
 
   publish:
@@ -212,5 +254,7 @@ jobs:
           tag_name: ${{ steps.ver.outputs.tag }}
           name: "Version ${{ steps.ver.outputs.tag }}"
           body: ${{ steps.body.outputs.body }}
-          files: RELEASE_CHANGELOG-*.md
+          files: |
+            RELEASE_CHANGELOG-*.md
+            sbom/${{ steps.ver.outputs.rel }}/*.json
 
